...
        android:text="placeholder"
        android:gravity="start"
        android:textSize="18sp"
        android:layout_marginHorizontal="15dp">
    </TextView>
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/text_field"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:hint="placeholder"
        android:textSize="18sp"
        android:layout_marginHorizontal="15dp">
...
            android:layout_marginEnd="5dp"
            android:gravity="center"
            android:text="CancelPlaceholder"
            app:cornerRadius="4dp">
        </Button>
        <Button
            android:id="@+id/confirm_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:gravity="center"
            android:text="ConfirmPlaceholder"
...
