<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_bar_home"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/ic_search"
        android:title="@string/nav_bar_search"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/nav_notifs"
        android:icon="@drawable/ic_notifs"
        android:title="@string/nav_bar_notifs"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/nav_account"
        android:icon="@drawable/ic_account"
        android:title="@string/nav_bar_account"
        app:showAsAction="ifRoom"/>
</menu>
