...
    <string name="profile_page_name_header">Name:</string>
    <string name="profile_page_email_header">Email:</string>
    <string name="profile_page_phone_header">Phone Number:</string>
    <string name="profile_page_edit_button_text">Edit</string>
    <string name="profile_page_notifications_header">Notifications:</string>
    <string name="profile_page_notifications_enabled">Push notifications enabled</string>
    <string name="profile_page_notifications_disabled">Push notifications disabled</string>
    <string name="action_delete_account">Delete Account</string>
    <string name="create_event_btn_description">Create event</string>
    <string name="selected_role_icon_description">Currently selected role</string>
    <string name="qr_share_description">Share QR code</string>
    <string name="qr_image_description">QR code for Event</string>
    <string name="share_btn_text">Share</string>
...
